# depotpy

./: .coverage  .gitignore  CHANGELOG.md  README.md  README_zh.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.serena/: project.yml
docs/assets/: depotpy-codegraph-packbuilder.dot
docs/en/: api-reference.md  architecture.md  cli-reference.md  contributing.md  getting-started.md
docs/zh/: api-reference.md  architecture.md  cli-reference.md  contributing.md  getting-started.md
src/depotpy/: __init__.py  __main__.py  cli.py  detector.py  fs.py  installer.py  manifest.py  models.py  output.py  packer.py  platforms.py  resolver.py
src/depotpy/commands/: inspect.py  install.py  pack.py
src/pydepot/: __init__.py  cli.py  detector.py  installer.py  manifest.py  models.py  packer.py  platforms.py  resolver.py
src/pydepot/commands/: inspect.py  install.py  pack.py
tests/: test_cli.py  test_detector.py  test_fs.py  test_inspect.py  test_installer.py  test_manifest.py  test_models.py  test_output.py  test_pack_command.py  test_packer.py  test_platforms.py  test_resolver.py
