[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depotpy"
version = "0.1.0"
description = "Build cross-platform offline installation packages for Python projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "MrLYC", email = "imyikong@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
pydepot = "pydepot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pydepot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
